Set up forms.py

--- a/cf_app/templates/cf_app/index.html
+++ b/cf_app/templates/cf_app/index.html
@@ -129,8 +129,31 @@
 
         </header>
 
-    </div>
+        <!-- Container for car selection information -->
+        <div class="w3-container">
+            <form method="GET">
+                {{form}}
+                <input type="submit" value="Submit">
+            </form>
+        </div>
 
+    </div>
+    <!-- Footer -->
+    <style>
+        html,
+        body {
+            padding: 0;
+            margin: 0;
+            height: 100%;
+        }
+
+        footer {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+        }
+    </style>
     <footer class="w3-container w3-theme-d5 w3-padding-32 w3-margin-top">
         <p>Created by <a href="https://github.com/Jesch101">Jeremy Esch</a> and <a
                 href="https://github.com/connorbustos">Connor Bustos</a></p>
