Updated car form logic, added new templates

--- a/cf_app/templates/base.html
+++ b/cf_app/templates/base.html
@@ -150,8 +150,8 @@
         }
     </style>
     <footer class="w3-container w3-theme-d5 w3-padding-32 w3-margin-top">
-        <p>Created by <a href="https://github.com/Jesch101">Jeremy Esch</a> and <a
-                href="https://github.com/connorbustos">Connor Bustos</a></p>
+        <p>Created by <a href="https://github.com/Jesch101" target="_blank">Jeremy Esch</a> and <a
+                href="https://github.com/connorbustos" target="_blank">Connor Bustos</a></p>
 
     </footer>
 
