Scaled the map and the footer to be compatible with mobile devices. Created text forms for origin and destination addresses. Changed font to sans-serif. Changed the butotns.

--- a/cf_app/templates/cf_app/home.html
+++ b/cf_app/templates/cf_app/home.html
@@ -219,7 +219,7 @@
 
   <!--Load the API from the specified URL -- remember to replace YOUR_API_KEY-->
   <script async
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBRWDmf-Np5VeKSZiyU9hxQwraUfUb333I
+  src="https://maps.googleapis.com/maps/api/js?key=
   &callback=initMap">
 </script>
   </script>
